# pluvianus

./: Contributing.md  README.ipynb  README.md  Tutorial.md  Usage.md  __main__.py  asd.py  caiman_env_after_pluvianus_bad.txt  caiman_env_good.txt  caiman_pip.txt  caiman_pip_after_pluvianus_bad.txt  caiman_pip_good.txt  pluvianus_paper_v1_250730_forFlatiron.docx  pyproject.toml  try_pyqt_2ax.py
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: Contributing.md  Installation.md  Tutorial.md  Usage.md
pluvianus/: CaImAnFileChecker.py  GripSplitter.py  __init__.py  __main__.py  asd.py  asd2.py  asd3.py  main.py  pluvianus.py  pluvianus_app.py  pnapple_npz_viewer.py  pynapple_npz_viewer.py  try.py  try2.py  try2_matplotlib.py  try3.py  try4.py  try5.py  try_nb.ipynb  try_plotly.py  try_pyqtgraph.py
pluvianus/try/: try4_splitter.py  try5_ImageItem.py  try_pyside6_3d.py  try_pyside6_scroll.py
