[project]
name = "pluvianus"
dynamic = ["version"]
requires-python = ">=3.10"
description = "CaImAn result browser"
readme = "README.md"
authors = [
    { name = "Gergely Katona", email = "katona.gergely@ttk.hu" }
]
license = { file = "LICENSE" }
keywords = ["CaImAn", "GUI", "neuroscience"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    "PySide6",
    "pyqtgraph",
    "pynapple"
    # caiman expected in the caiman environment
]

[project.urls]
Homepage = "https://github.com/katonage/pluvianus"
Source = "https://github.com/katonage/pluvianus"
Issues = "https://github.com/katonage/pluvianus/issues"
Documentation = "https://github.com/katonage/pluvianus#readme"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"

[project.scripts]
pluvianus = "pluvianus.__main__:main"

[tool.setuptools.package-data]
pluvianus = ["*.ico", "*.png"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["pluvianus.try"] # we will delete the try folder before publication
